deploy/kubernetes/kustomize/profiles/split/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opsknight-service
  namespace: opsknight
spec:
  selector:
    app: opsknight-app
    opsknight-role: web
